# ckl-bench

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  README.md  pyproject.toml  test.py
.github/workflows/: ci.yml
cases/agent/: execution_graded.jsonl  file_patch.jsonl  hard_programming.jsonl
cases/chat/: execution_graded.jsonl  frontier_compute.jsonl  hard_programming.jsonl  language_semantics.jsonl  private_reasoning.jsonl
cases/doc-writing/: doc_writing.jsonl
cases/infra-code/: infra_code.jsonl
cases/judge/: judge.jsonl
cases/paper-reading/: paper_reading.jsonl
ckl_bench/: __init__.py  cli.py
ckl_bench/adapters/: __init__.py  _http.py  anthropic.py  base.py  command.py  gemini.py  http_json.py  mock.py  openai_compatible.py  registry.py
ckl_bench/core/: __init__.py  cache.py  cases.py  compare.py  db.py  env.py  grading.py  judge.py  logging_config.py  paths.py  providers.py  reporting.py  run_manager.py  runner.py  sandbox.py  server.py  settings.py  usage.py
ckl_bench/resources/: __init__.py
ckl_bench/resources/cases/agent/: execution_graded.jsonl
ckl_bench/resources/cases/chat/: execution_graded.jsonl  language_semantics.jsonl
ckl_bench/resources/cases/doc-writing/: doc_writing.jsonl
ckl_bench/resources/cases/paper-reading/: paper_reading.jsonl
ckl_bench/resources/configs/: gemini.example.json  mock.responses.json  openai.example.json
ckl_bench/web/: __init__.py  index.html
ckl_bench/wrappers/: claude_code.py  codex.py  common.py  dsx.py
configs/: anthropic.example.json  command.example.json  http-json.example.json  mock.responses.json  openrouter.example.json
docs/: ADAPTERS.md  CASE_SCHEMA.md  ENV.md  EXTENDING.md  PROBES.md  STANDARD.md
evalbench/: cli.py
evalbench/adapters/: _http.py  anthropic.py  gemini.py  http_json.py  openai_compatible.py  registry.py
evalbench/core/: cases.py  env.py  grading.py  providers.py  reporting.py  runner.py  sandbox.py  stats.py  usage.py
registries/models/: README.md  deepseekv4.jsonl  dsx.jsonl
scripts/: _common.py  claude_code_wrapper.py  codex_wrapper.py  command_agent_example.py  dsx_wrapper.py  frontier_cases.py  sync_resources.py
tests/: test_anthropic.py  test_cache.py  test_cli.py  test_compare.py  test_core.py  test_db.py  test_grading.py  test_judge.py  test_logging.py  test_providers.py  test_release.py  test_reporting.py  test_run_manager_contracts.py  test_runner_features.py  test_sandbox.py  test_security.py  test_server.py  test_stats.py  test_usage.py
web/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/components/: analysis-cards.tsx  capability-table.tsx  case-editor.tsx  case-table.tsx  comparison-table.tsx  difficulty-table.tsx  failure-analysis.tsx  heatmap.tsx  pack-detail.tsx  run-detail.tsx  run-table.tsx  score-card.tsx  settings-drawer.tsx  sidebar.tsx  theme-toggle.tsx  trend-chart.tsx
web/src/components/ui/: badge.tsx  card.tsx  separator.tsx  sheet.tsx  tabs.tsx  textarea.tsx  toast.tsx  tooltip.tsx
web/src/lib/: api.ts  data.ts  i18n.tsx  scroll-lock.ts  types.ts  use-copy-toast.ts  utils.ts
web/src/pages/: bench-page.tsx  cases-page.tsx  dashboard-page.tsx  diff-page.tsx  launch-page.tsx  probe-page.tsx  progress-page.tsx  report-page.tsx  reports-page.tsx
web/src/test/: analysis-cards.test.tsx  api-contract.test.ts  bench-page.test.tsx  bench-reducer.test.ts  case-editor.test.tsx  comparison-table.test.tsx  diff-significance.test.tsx  failure-analysis.test.tsx  i18n.test.tsx  settings-drawer.test.tsx  setup.ts
