[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-evalbench"
version = "0.1.0"
description = "Dependency-light private evaluation runner for LLM and agent cases."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
evb = "evalbench.cli:main"
evalbench = "evalbench.cli:main"

[tool.setuptools.packages.find]
include = ["evalbench*"]
