[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-evalbench"
version = "0.1.0"
description = "Dependency-light private evaluation runner for LLM and agent cases."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "cklxx" }]
keywords = ["llm", "evaluation", "benchmark", "agent", "eval", "pass-at-k"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
]
# The core runner is intentionally stdlib-only: no required dependencies.
dependencies = []

[project.urls]
Homepage = "https://github.com/cklxx/eval"
Repository = "https://github.com/cklxx/eval"

[project.optional-dependencies]
# Optional only -- a fresh clone must still pass `evb smoke` with zero installs.
dev = ["ruff>=0.5", "mypy>=1.8"]

[project.scripts]
evb = "evalbench.cli:main"
evalbench = "evalbench.cli:main"

[tool.setuptools.packages.find]
include = ["evalbench*"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Utility scripts favor a compact, tight-interpreter idiom; zips here are
# provably equal-length by construction.
"scripts/*" = ["E701", "E702", "B905", "UP033"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
