[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ckl-bench"
version = "0.1.0"
description = "ckl's personal benchmark for doc writing, infra code, and paper reading — one-click evaluation of the latest models via TUI coding CLIs."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "ckl" }]
keywords = ["llm", "evaluation", "benchmark", "agent", "eval", "pass-at-k", "coding-cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
]
# The core runner is intentionally stdlib-only: no required dependencies.
dependencies = []

[project.urls]
Homepage = "https://github.com/cklxx/ckl-bench"
Repository = "https://github.com/cklxx/ckl-bench"

[project.optional-dependencies]
# Optional only -- a fresh clone must still pass `ckl smoke` with zero installs.
dev = ["ruff>=0.5", "mypy>=1.8"]
# Live dashboard server (WebSocket progress). Without it, the server falls
# back to HTTP polling.
serve = ["websockets>=12"]
# Robust JSON repair for LLM judge/reviewer/verifier responses. Without it,
# the parser falls back to a stdlib balanced-brace extractor.
json = ["json-repair>=0.25"]

[project.scripts]
ckl = "ckl_bench.cli:main"
ckl-bench = "ckl_bench.cli:main"
evb = "ckl_bench.cli:main"

[tool.setuptools.packages.find]
include = ["ckl_bench*"]

[tool.setuptools.package-data]
"ckl_bench.web" = ["index.html"]
"ckl_bench.resources" = [
    "cases/**/*.jsonl",
    "configs/*.json",
    "registries/models/*.jsonl",
]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Utility scripts favor a compact, tight-interpreter idiom; zips here are
# provably equal-length by construction.
"scripts/*" = ["E701", "E702", "B905", "UP033"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
